--- a/manifest.json
+++ b/manifest.json
@@ -3,16 +3,16 @@
     "version": "1.0",
     "manifest_version": 2,
     "author": "Nwachukwu Chibuike",
-    "description": "Monitors group messages for specific keywords and returns desired response.",
+    "description": "Monitors chat messages for specific keywords and returns desired response.",
     "icons":{
       "128":"/src/img/icon.png"
       },
     "background": {
-      "scripts": ["assets/js/background.js"],
+      "scripts": ["src/js/background.js"],
       "persistent": false
     },
     "browser_action": {
-      "default_title": "WhatsApp Group Monitor",
+      "default_title": "WhatsApp  Monitor",
       "default_popup": "index.html"
     },
     "permissions": [
