Adds a readme, makes minor modifications

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "WhatsApp Group Monitor",
+    "name": "WhatsApp Monitor",
     "version": "1.0",
     "manifest_version": 2,
     "author": "Nwachukwu Chibuike",
