Adding host permission to avoid error message

--- a/manifest.json
+++ b/manifest.json
@@ -19,5 +19,8 @@
       "activeTab",
       "storage",
       "tabs"
+    ],
+    "host_permissions": [
+      "https://web.whatsapp.com/*"
     ]
   }
